add dag wrapper for commit log